name: mpdfs
version: 0.1
homepage: http://github.com/joachifm/mpdfs
synopsis: A FUSE filesystem for the Music Player Daemon
description: Allows the user to control MPD (Music Player Daemon) by manipulating
    files and folders in a virtual filesystem.
category:
license: GPL
license-file: COPYING
author: Joachim Fasting
maintainer: joachim.fasting@gmail.com
extra-source-files: README.md TODO.org
cabal-version: >= 1.6 && < 1.9
build-type: Simple

flag base3
    description: Use base version 3
    default: False

executable mpdfs
    main-is: Main.hs

    if flag(base3)
        build-depends: base ==3.*
    else
        build-depends: base ==4.*

    build-depends: bytestring ==0.9.*,
                   containers ==0.3.*,
                   filepath ==1.*,
                   HFuse ==0.2.*,
                   libmpd ==0.4.*,
                   mtl ==1.*,
                   network ==2.*,
                   unix ==2.*
